# fsk-lang

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  WINDOWS_BUILD.md  build_windows.sh  ecosystem.config.js  egg-fsk-language.json  fpm.fsk  package.bat  package.fsk  packages.db  setup.iss  temp.fsk  test_phase1.fsk  test_shell.fsk  throw_nested.fsk  throw_nested_native.fsk  throw_test.fsk
.github/workflows/: build.yml
docs/: index.html  server.fsk  temp_repl.fsk  ui.fsk  ui.js
fpm/: fpm.fsk  package.fsk
fs_test_dir/: stat_test.txt
fsk-core/: Cargo.toml
fsk-core/src/: crypto.rs  ffi.rs  http.rs  lib.rs  net.rs  sql.rs  system.rs  utils.rs  vm.rs
fsk-extension/: README.md  fsk-lang-1.0.0.vsix  language-configuration.json  package.json
fsk-extension/syntaxes/: fsk.tmLanguage.json
fsk-lsp/: Cargo.toml
fsk-lsp/src/: analysis.rs  main.rs
include/: AstPrinter.hpp  Callable.hpp  Compiler.hpp  Environment.hpp  EventLoop.hpp  Expr.hpp  HttpCallback.hpp  Interpreter.hpp  Lexer.hpp  Parser.hpp  Stmt.hpp  Token.hpp  TypeChecker.hpp  Utils.hpp
pterodactyl/: egg-fsk-language.json
registry/: package-lock.json  package.json  server.js
registry/public/: app.js  index.html  style.css
src/: main.cpp
src/compiler/: Compiler.cpp  TypeChecker.cpp
src/lexer/: Lexer.cpp
src/modules/: easywsclient.cpp
src/parser/: Parser.cpp
src/runtime/: Callable.cpp  Interpreter.cpp
std/: async.fsk  cli.fsk  crypto.fsk  fs.fsk  gui.fsk  http.fsk  json.fsk  list.fsk  math.fsk  prelude.fsk  sql.fsk
tests/: array_funct_test.fsk  async_test.fsk  audio_test.fsk  bitwise_test.fsk  const_fold_test.fsk  dict_test.fsk  error_test.fsk  fs_test.fsk  fsk_ui_demo.fsk  game_demo.fsk  graphics_demo.fsk  gui_demo.fsk  lib.fsk  phase1_full.fsk  phase1_test.fsk  stdlib_test_output.txt  stdlib_verify.fsk  sys_test_cli.fsk  sys_test_http.fsk  sys_test_new_std.fsk  sys_test_structs.fsk  sys_test_test.fsk  test.fsk  test_array.fsk  test_async.fsk  test_async_fetch.fsk  test_class_full.fsk  test_console.fsk  test_crypto.fsk  test_date.fsk  test_discord.fsk  test_fetch.fsk  test_ffi.fsk  test_final_push.fsk  test_for.fsk  test_fpm_lock.fsk  test_fs.fsk  test_func.fsk  test_gui_auto.fsk  test_http.fsk  (+30 more)
tests/fpm_test/: fsk.json
web/: index.html  main.fsk  ui.js
