[package]
name = "fsk-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
axum = "0.6"
lazy_static = "1.4"
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
ring = "0.17"
rusqlite = { version = "0.29", features = ["bundled"] }
sysinfo = "0.29"
hex = "0.4"
md5 = "0.7"
libloading = "0.8"
